--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,3 +13,12 @@ body{
 ::-webkit-scrollbar{
     display: none;
 }
+
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+option:hover {
+    cursor: pointer !important;
+}
