fix: change swal to custom pop up and adjust ui

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,6 +25,9 @@ input{
       border-color:#666;
       color:#666;
 }
+button{
+  cursor: pointer;
+}
 select{
       outline: none !important;
       border-color:#666;
