--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,6 +24,7 @@ input{
       outline: none !important;
       border-color:#666;
       color:#666;
+      font-size: 14px;
 }
 button{
   cursor: pointer;
